<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CambiadorDeSonidos" >

    <TextView
        android:id="@+id/txtvMensajes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Mensajes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtvRingtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtvMensajes"
        android:layout_below="@+id/txtvMensajes"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/Ringtone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvRingtone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/txtvSelectedSong"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtfSelectedSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:text="@string/txtfSelectedSong" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSelectSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="cambio"
        android:text="@string/btnSelectSong" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSelectSong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:onClick="aplicar"
        android:text="@string/ApplySms" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnApply"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="aplicarLlamada"
        android:text="@string/ApplyLlamada" />

</RelativeLayout>